# racesow

./: README.md
source/: CMakeLists.txt
source/cgame/: cg_chat.cpp  cg_cmds.cpp  cg_effects.cpp  cg_ents.cpp  cg_hud.cpp  cg_lents.cpp  cg_local.h  cg_main.cpp  cg_scoreboard.cpp  cg_screen.cpp  cg_syscalls.h
source/game/: CMakeLists.txt  g_ascript.cpp  g_callvotes.cpp  g_chase.cpp  g_gameteams.cpp  g_gametypes.cpp  g_gametypes.h  g_local.h  g_racesow.h  g_weapon.cpp  p_client.cpp  rs_auth.cpp  rs_query.cpp
source/gameshared/: gs_pmove.c  gs_public.h
source/matchmaker/: mm_query.c  mm_query.h
source/qcommon/: wswcurl.c  wswcurl.h
